# rust-auto-gpt

./: .gitignore  Cargo.toml  README.md
schemas/: api_schema.json
src/: main.rs
src/apis/: call_request.rs
src/helpers/: command_line.rs  general.rs
src/models/: mod.rs
src/models/agent_basic/: basic_agent.rs
src/models/agents/: agent_architect.rs  agent_architects.rs  agent_backend.rs  agent_traits.rs  mod.rs
src/models/agents_manager/: managing_agent.rs
src/models/general/: llm.rs
