[package]
name = "auto_gippity"
version = "0.1.0"
edition = "2024"

[dependencies]
ai_functions = "0.1.1"
async-trait = "0.1.83"
crossterm = "0.28.1"
dotenv = "0.15.0"
reqwest = { version = "0.12.11", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
strum = "0.26.3"
strum_macros = "0.26.4"
tokio = { version = "1.42.0", features = ["full"] }
webbrowser = "1.0.3"
